Fix update time